# PROYECTO-MIDAS-DEMO

./: .env.example  .gitignore  DEPLOY_RAILWAY.md  PRESENTACION.md  Procfile  RAILWAY_FORCE_DEPLOY.md  README.md  README_DEPLOY.md  docker-compose.yml  midas_api_complete.py  midas_dashboard.py  midas_dashboard_complete.py  predict_test_output.txt  pyproject.toml  railway.dashboard.toml  railway.toml  requirements-dashboard.txt  requirements.txt  run_demo.py  simple_demo_api.py  test_demo_api.py  test_simple_demo.py
api/: main.py
config/: railway.toml
dashboard/: app.py
db/: init.sql
demo_api/: __init__.py  demo_main.py
demo_dashboard/: __init__.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.dashboard  Dockerfile.db-seed  Dockerfile.test  Dockerfile.training  streamlit.toml  streamlit_config.toml  streamlit_config_demo.toml
docs/: CHANGELOG.md
requirements/: api.txt  dashboard.txt  requirements-dashboard.txt  requirements-test.txt  requirements-training.txt  requirements.txt
scripts/: DEPLOY_RAILWAY.md  deploy.sh  run_local.py
src/: __init__.py
src/dashboard/: app.py
src/dashboard/utils/: __init__.py
tests/: __init__.py  test_config.py  test_dashboard.py  test_error.txt  test_integration.py
