# ══════════════════════════════════════════════════════════════════════════════
# pyproject.toml - Configuración de Proyecto MIDAS
# Configuración moderna de Python para herramientas de desarrollo
# ══════════════════════════════════════════════════════════════════════════════

[project]
name = "midas-dashboard"
version = "2.0.0"
description = "Dashboard independiente para predicciones de restaurante"
authors = [
    {name = "MIDAS Team", email = "dev@midas-project.com"}
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]